--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- c3 css link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css">
     <title>week7 diagram</title>
 </head>
+
 <body>
-    
-    
+    <div id="chart"></div>
+
+
+    <!-- ajax json -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- c3 d3 js link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
     <script src="all.js"></script>
 </body>
+
 </html>
