判斷式的問題

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </select>
             <p id="searchResult-text">本次搜尋共 3 筆資料</p>
 
-            <div id="chart" class="diagram-width"></div>
+            <div id="areaDonut" class="diagram-width"></div>
         </div>
 
         <!-- 套票卡片區 -->
@@ -229,9 +229,8 @@
         </div>
     </section>
 
-
-
-
+    <!-- validate js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <!-- ajax json -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- c3 d3 js link -->
